# Drommage

./: .gitignore  CLAUDE.md  CUSTOM_PROMPTS.md  FIXES_SUMMARY.md  GETTING_STARTED.md  LICENSE  MANIFEST.in  MEMORY1.md  MEMORY2.md  PROJECT_TODO.md  README.md  TODO_CRITICAL_ISSUES.md  UNIVERSAL_PROVIDERS.md  USER_GUIDE.md  debug_analysis.py  demo_status.py  devflow.py  drommage.py  example_custom_prompts.json  example_providers.json  final_test.py  improvements_summary.md  main_v8.py  pyproject.toml  requirements.txt  show_controls.py  simple_drommage.py  test_analysis.py  test_analysis_display.py  test_basic.py  test_curses.py  test_direct_analysis.py  test_input.py  test_json_parser.py  test_ui_display.py  v3.py
.devflow/: config.json
.drommage/: decisions.json  llm_cache.json  prompts.json  providers.json  sessions.json  tasks.json
core/: diff_engine.py  git_engine.py  llm_analyzer.py  mock_data.py  region_index.py  tui.py  tui_v8.py  tui_viewer.py
devflow_core/: __init__.py  execution_protocol.py  task_tracker.py
docs/: v0.1.txt  v0.3.txt  v0.6.txt  v1.0.txt  v1.2.txt  v1.txt  v3.txt  v5.txt
docs/development/: ARCHITECTURE.md  PRODUCT_ROADMAP.md  PYPI_UPLOAD_INSTRUCTIONS.md
docs/memory/: MEMORY3.md  MEMORY4.md  MEMORY5.md
drommage/: __init__.py  cli.py
drommage/core/: __init__.py  analysis.py  analysis_queue.py  cache.py  config_tui.py  diff_tracker.py  editor.py  engine.py  git_integration.py  interface.py  llm_analyzer.py  pattern_analyzer.py  prompts.py  providers.py  region_analyzer.py
old_refs/: app.py  main.py  main_v7.py  v2.py  v5.py
old_refs/v4/core/: mock_data.py  tui.py
old_refs/v6/: main.py
old_refs/v6/core/: diff_engine.py  tui.py
test_docs/: v1.2.txt  v2.txt
test_docs/docs/: v0.6.txt  v4.txt
test_scripts/: test_status.py
v4/: main.py
v4/core/: diff_engine.py  tui.py.v1
v5/: main.py
v5/core/: diff_engine.py  editor.py  tui.py
v5/docs/: v0.1.txt  v0.3.txt  v1.0.txt
v6/core/: editor.py
