[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drommage"
version = "1.0.0"
description = "AI-powered git commit analysis tool for developers and teams"
authors = [{name = "DRommage Contributors", email = "drommage@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Quality Assurance",
    "Environment :: Console :: Curses",
    "Environment :: Console",
]
keywords = ["git", "llm", "ai", "analysis", "commit", "retrospection", "code-review", "cli", "tui"]

[project.optional-dependencies]
dev = ["pytest", "flake8", "mypy"]

[project.scripts]
drommage = "drommage.cli:main"

[project.urls]
Homepage = "https://github.com/yoursteacup/drommage"
Repository = "https://github.com/yoursteacup/drommage"
Documentation = "https://github.com/yoursteacup/drommage#readme"
Issues = "https://github.com/yoursteacup/drommage/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["drommage*"]